# lore-triager

./: .env.example  .gitignore  README.md  pyproject.toml
docs/temp/: 2026-03-19-i915-ci-bat-success-for-rust-interop-add-list-module-for-c-linked-list-interface-rev4.md  2026-03-19-patch-v3-3-4-rust-rework-build-assert-documentation.md  2026-03-19-re-patch-v13-1-1-rust-interop-add-list-module-for-c-linked-list-interface.md  2026-03-19-re-rfc-patch-02-12-drm-dep-add-drm-dependency-queue-layer.md  2026-03-20-patch-v6-2-5-rust-drm-introduce-devicecontext.md  2026-03-20-xe-ci-bat-success-for-rust-gpu-buddy-allocator-bindings-rev3.md  2026-03-24-re-patch-rust-regulator-do-not-assume-that-regulator-get-returns-non-null.md  2026-03-24-rust-regulator-do-not-assume-that-regulator-get-returns-non-null.md  index.json
src/lore_bug_finder/: __main__.py  cli.py  config.py  db.py  ingest.py  llm.py  models.py  prompts.py  reporting.py  utils.py
src/mbox_triager/: __init__.py  __main__.py
tests/: test_pipeline.py
