[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-triager"
version = "0.1.0"
description = "Offline mbox triage for manually downloaded lore/public-inbox archives."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mbox-triage = "lore_bug_finder.cli:main"
lore-bug = "lore_bug_finder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
